kubernetes/main/namespace.yml
# kubernetes/main/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: main
  labels:
    environment: production
