kubernetes/main/service.yml
# kubernetes/main/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  namespace: main
  labels:
    app: kong
    environment: production

spec:
  type: LoadBalancer
  selector:
    app: kong

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000

    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443

    - name: admin
      protocol: TCP
      port: 8001
      targetPort: 8001

    - name: admin-ssl
      protocol: TCP
      port: 8444
      targetPort: 8444
